fix: flesh out translation dialog. fix bug with non-visible attributeWidget

--- a/src/css/icons.less
+++ b/src/css/icons.less
@@ -215,3 +215,10 @@
 .img.fullscreen-deactivate:before {
     content: url(../img/arrow_in.png);
 }
+
+.fas.translation:before {
+    content: "\f1ab";
+}
+.img.translation:before {
+    content: url(../img/comments.png);
+}
